// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Page Main should match snapshot for AMP 1`] = `
@keyframes animation-0 {
  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-1 {
  width: 100%;
}

@supports (display: grid) {
  .emotion-1 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-1 {
      grid-template-columns: repeat(20, 1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width: 80rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-3 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-3 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-3 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-3 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-3 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width: 80rem) {
  .emotion-3 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display: grid) {
  .emotion-3 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-3 {
      grid-template-columns: repeat(12, 1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-5 {
  font-size: 1.75rem;
  line-height: 2.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #141414;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-5 {
    font-size: 2rem;
    line-height: 2.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-5 {
    font-size: 2.75rem;
    line-height: 3.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-5 {
    padding: 2.5rem 0;
  }
}

.emotion-7 {
  color: #141414;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  margin: 0;
  padding-bottom: 1.5rem;
}

@media (min-width: 20rem) {
  .emotion-7 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

.emotion-8 {
  position: relative;
}

.emotion-10 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.no-js .emotion-10 {
  display: none;
}

.emotion-12 {
  width: 64px;
  height: 64px;
  stroke: currentColor;
  will-change: transform;
}

@media screen and (-ms-high-contrast: active) {
  .emotion-12 {
    stroke: windowText;
  }
}

@media (prefers-reduced-motion: no-preference) {
  .emotion-12 {
    -webkit-animation: animation-0 1.1s 3 linear;
    animation: animation-0 1.1s 3 linear;
  }
}

.emotion-15 amp-iframe,
.emotion-15 div>iframe {
  width: calc(100% + 1rem);
  margin: 0 -0.5rem;
}

@media (min-width: 25rem) {
  .emotion-15 amp-iframe,
  .emotion-15 div>iframe {
    width: calc(100% + 2rem);
    margin: 0 -1rem;
  }
}

.emotion-17 {
  height: 165px;
  position: relative;
  margin-bottom: 1rem;
}

@media (min-width: 63rem) {
  .emotion-17 {
    margin-bottom: 2rem;
  }
}

.emotion-19 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #F2F2F2;
  -webkit-background-position: center center;
  background-position: center center;
  background-repeat: no-repeat;
  -webkit-background-size: 60px 17px;
  background-size: 60px 17px;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

@media (min-width: 25rem) {
  .emotion-19 {
    -webkit-background-size: 77px 22px;
    background-size: 77px 22px;
  }
}

@media (min-width: 63rem) {
  .emotion-19 {
    -webkit-background-size: 93px 27px;
    background-size: 93px 27px;
  }
}

<div>
  <amp-analytics>
    <script
      type="application/json"
    >
      {"transport":{"beacon":false,"xhrpost":false,"image":true},"requests":{"pageview":"\${base}s=598343&s2=3&p=afrique.bbc_afrique_radio.liveradio.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn%3Abbc%3Aares%3Aws_media%3Alive%3Abbc_afrique_radio]&x2=[amp]&x3=[news-afrique]&x4=[fr]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[player-live]&x8=[simorgh]&x9=[BBC%2BAfrique%2BRadio%2B-%2BBBC%2BNews%2BAfrique]&ref=\${documentReferrer}"},"triggers":{"trackPageview":{"on":"visible","request":"pageview"}}}
    </script>
  </amp-analytics>
  <div>
    chartbeat
  </div>
  <amp-analytics
    type="comscore"
  >
    <script
      type="application/json"
    >
      {"vars":{"c2":"17986528"},"extraUrlParams":{"comscorekw":"amp"}}
    </script>
  </amp-analytics>
  <main
    class="emotion-0 emotion-1 emotion-2"
    dir="ltr"
    role="main"
  >
    <div
      class="emotion-3 emotion-2"
      dir="ltr"
    >
      <h1
        class="emotion-5 emotion-6"
        id="content"
        tabindex="-1"
      >
        BBC Afrique Radio
      </h1>
      <p
        class="emotion-7"
      >
        Infos, musique et sports
      </p>
      <div
        class="emotion-8 emotion-9"
      >
        <div
          aria-hidden="true"
          class="emotion-10 emotion-11"
          data-testid="audio-loader-overlay"
        >
          <svg
            class="emotion-12 emotion-13"
            focusable="false"
            height="38"
            stroke="black"
            viewBox="0 0 38 38"
            width="38"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              stroke-width="2"
              transform="translate(1 1)"
            >
              <circle
                cx="18"
                cy="18"
                r="18"
                stroke-opacity="0.2"
              />
              <path
                d="M36 18c0-9.94-8.06-18-18-18"
              />
            </g>
          </svg>
        </div>
        <div
          class="emotion-14 emotion-15 emotion-16"
        >
          <div
            class="emotion-17 emotion-18"
          >
            <amp-iframe
              allowfullscreen="allowfullscreen"
              data-e2e="media-player"
              frameborder="0"
              layout="fill"
              sandbox="allow-scripts allow-same-origin"
              scrolling="no"
              src="https://polling.test.bbc.co.uk/ws/av-embeds/media/bbc_afrique_radio/liveradio/fr/amp?morph_env=live"
              title="Lecteur audio"
            >
              <div
                class="emotion-19 emotion-20"
                data-e2e="image-placeholder"
                placeholder=""
                style="padding-bottom: 56.25%;"
              />
              <noscript />
            </amp-iframe>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`Radio Page Main should match snapshot for Canonical 1`] = `
@keyframes animation-0 {
  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-1 {
  width: 100%;
}

@supports (display: grid) {
  .emotion-1 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-1 {
      grid-template-columns: repeat(20, 1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width: 80rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-3 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-3 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-3 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-3 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-3 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width: 80rem) {
  .emotion-3 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display: grid) {
  .emotion-3 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-3 {
      grid-template-columns: repeat(12, 1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-5 {
  font-size: 1.75rem;
  line-height: 2.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #141414;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-5 {
    font-size: 2rem;
    line-height: 2.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-5 {
    font-size: 2.75rem;
    line-height: 3.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-5 {
    padding: 2.5rem 0;
  }
}

.emotion-7 {
  color: #141414;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  margin: 0;
  padding-bottom: 1.5rem;
}

@media (min-width: 20rem) {
  .emotion-7 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

.emotion-8 {
  position: relative;
}

.emotion-10 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.no-js .emotion-10 {
  display: none;
}

.emotion-12 {
  width: 64px;
  height: 64px;
  stroke: currentColor;
  will-change: transform;
}

@media screen and (-ms-high-contrast: active) {
  .emotion-12 {
    stroke: windowText;
  }
}

@media (prefers-reduced-motion: no-preference) {
  .emotion-12 {
    -webkit-animation: animation-0 1.1s 3 linear;
    animation: animation-0 1.1s 3 linear;
  }
}

.emotion-15 amp-iframe,
.emotion-15 div>iframe {
  width: calc(100% + 1rem);
  margin: 0 -0.5rem;
}

@media (min-width: 25rem) {
  .emotion-15 amp-iframe,
  .emotion-15 div>iframe {
    width: calc(100% + 2rem);
    margin: 0 -1rem;
  }
}

.emotion-17 {
  height: 165px;
  position: relative;
  margin-bottom: 1rem;
}

@media (min-width: 63rem) {
  .emotion-17 {
    margin-bottom: 2rem;
  }
}

.emotion-19 {
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.emotion-21 {
  background-color: #F2F2F2;
  padding: 0 1rem;
  content-visibility: auto;
  contain-intrinsic-size: 59.375rem;
}

@media (min-width: 15rem) {
  .emotion-21 {
    contain-intrinsic-size: 56.563rem;
  }
}

@media (min-width: 25rem) {
  .emotion-21 {
    contain-intrinsic-size: 51.063rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-21 {
    contain-intrinsic-size: 30.75rem;
  }
}

@media (min-width: 63rem) {
  .emotion-21 {
    contain-intrinsic-size: 21.25rem;
  }
}

.emotion-24 {
  position: relative;
  z-index: 0;
  color: #141414;
  margin-top: 2rem;
  margin: 0 auto;
  width: 100%;
  padding-top: 0.5rem;
}

@media (min-width: 37.5rem) {
  .emotion-24 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-24 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-24 {
    margin: 0 auto;
    padding-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-24 {
    max-width: 63rem;
    padding-top: 2rem;
  }
}

.emotion-26 {
  margin: 0;
  padding: 0;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

@media (min-width: 37.5rem) {
  .emotion-30 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.emotion-32 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  background-color: #F2F2F2;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-32 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-32 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-32 {
    margin: 0;
  }
}

@media (min-width: 37.5rem) {
  .emotion-32 {
    padding-right: 1rem;
  }
}

.emotion-34 {
  margin: 0 auto;
  width: 100%;
  padding-bottom: 1rem;
}

@media (min-width: 37.5rem) {
  .emotion-34 {
    margin-top: 1.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-34 {
    max-width: 63rem;
    padding-bottom: 1.5rem;
  }
}

.emotion-37 {
  padding: 0;
  margin: 0;
}

@media (max-width: 14.9375rem) {
  .emotion-37 {
    padding: 0 0.5rem;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-37 {
    padding: 0 0.5rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-37 {
    padding: 0 1rem;
  }
}

@supports (display: grid) {
  .emotion-37 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-37 {
      grid-template-columns: repeat(4, 1fr);
      grid-column-end: span 4;
      grid-column-gap: 0.5rem;
      padding: 0 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-37 {
      grid-template-columns: repeat(4, 1fr);
      grid-column-end: span 4;
      grid-column-gap: 0.5rem;
      padding: 0 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-37 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
      padding: 0 1rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-37 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-37 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-37 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }
}

@media (max-width: 37.5rem) {
  .emotion-37 {
    padding: 0;
  }
}

.emotion-40 {
  position: relative;
  padding-bottom: 1rem;
}

@media (max-width: 14.9375rem) {
  .emotion-40 {
    width: calc(4/4*(100% - 4 * 0.5rem) + 3 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-40 {
    width: calc(4/4*(100% - 4 * 0.5rem) + 3 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-40 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-40 {
    width: calc(3/6*(100% - 6 * 1rem) + 2 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-40 {
    width: calc(2/8*(100% - 8 * 1rem) + 1 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width: 80rem) {
  .emotion-40 {
    width: calc(2/8*(100% - 8 * 1rem) + 1 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display: grid) {
  .emotion-40 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-40 {
      grid-template-columns: repeat(4, 1fr);
      grid-column-end: span 4;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-40 {
      grid-template-columns: repeat(4, 1fr);
      grid-column-end: span 4;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-40 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-40 {
      grid-template-columns: repeat(3, 1fr);
      grid-column-end: span 3;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-40 {
      grid-template-columns: repeat(2, 1fr);
      grid-column-end: span 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-40 {
      grid-template-columns: repeat(2, 1fr);
      grid-column-end: span 2;
    }
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-40 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

.emotion-42 {
  padding-bottom: 0.5rem;
}

.emotion-44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-46 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 0.25rem;
}

.emotion-46>svg {
  color: #5A5A5A;
  margin: 0;
  overflow: visible;
}

@media screen and (forced-colors: active) {
  .emotion-46>svg {
    padding-right: 0.25rem;
    fill: canvasText;
  }
}

.emotion-48 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.725rem;
  height: 0.725rem;
}

.emotion-50 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
}

.emotion-50>time {
  color: #5A5A5A;
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-50>time {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-50>time {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-50::after {
  content: '';
  border-top: 0.0625rem solid #AEAEB5;
  top: 1rem;
  margin-left: 0.625rem;
  width: 100%;
}

.emotion-52 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #545658;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-52 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-52 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-54 {
  padding-top: 0.5rem;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  outline: 0.0625rem solid transparent;
  height: 100%;
}

.emotion-56 {
  padding: 0 0.5rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-58 {
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #222222;
  margin: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-58 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-58 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-60 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-60:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-60:hover,
.emotion-60:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-60:visited {
  color: #6E6E73;
}

.emotion-60:hover .emotion-67 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-60:focus .emotion-67 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-62 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-66 {
  color: #3F3F42;
  padding: 0.5rem 0;
  display: inline-block;
  width: 100%;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-66 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-66 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-70 {
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  padding-bottom: 1rem;
  margin: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-70 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-70 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-72 {
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #222222;
  outline: 0.0625rem solid transparent;
  color: #FFFFFF;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-72 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-72 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media screen and (-ms-high-contrast: active) {
  .emotion-72 {
    background-color: transparent;
    outline: none;
  }
}

.emotion-74>svg {
  color: #FFFFFF;
  fill: currentColor;
  width: 1.0625rem;
  height: 0.75rem;
  margin: 0;
}

@media screen and (forced-colors: active) {
  .emotion-74>svg {
    fill: canvasText;
  }
}

.emotion-76 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.8125rem;
  height: 0.75rem;
}

.emotion-78 {
  padding-left: 0.5rem;
}

.emotion-181 {
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #6E6E73;
  margin: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-181 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-181 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-185 {
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #11708C;
  display: inline-block;
  margin-right: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-185 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-185 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-189 {
  color: #6E6E73;
  padding: 0.5rem 0;
  display: inline-block;
  width: 100%;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-189 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-189 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-195 {
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #FFFFFF;
  outline: 0.0625rem solid transparent;
  color: #11708C;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-195 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-195 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media screen and (-ms-high-contrast: active) {
  .emotion-195 {
    background-color: transparent;
    outline: none;
  }
}

.emotion-197>svg {
  color: #11708C;
  fill: currentColor;
  width: 1.0625rem;
  height: 0.75rem;
  margin: 0;
}

@media screen and (forced-colors: active) {
  .emotion-197>svg {
    fill: canvasText;
  }
}

<div>
  <noscript />
  <div>
    chartbeat
  </div>
  <main
    class="emotion-0 emotion-1 emotion-2"
    dir="ltr"
    role="main"
  >
    <div
      class="emotion-3 emotion-2"
      dir="ltr"
    >
      <h1
        class="emotion-5 emotion-6"
        id="content"
        tabindex="-1"
      >
        BBC Afrique Radio
      </h1>
      <p
        class="emotion-7"
      >
        Infos, musique et sports
      </p>
      <div
        class="emotion-8 emotion-9"
      >
        <div
          aria-hidden="true"
          class="emotion-10 emotion-11"
          data-testid="audio-loader-overlay"
        >
          <svg
            class="emotion-12 emotion-13"
            focusable="false"
            height="38"
            stroke="black"
            viewBox="0 0 38 38"
            width="38"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              stroke-width="2"
              transform="translate(1 1)"
            >
              <circle
                cx="18"
                cy="18"
                r="18"
                stroke-opacity="0.2"
              />
              <path
                d="M36 18c0-9.94-8.06-18-18-18"
              />
            </g>
          </svg>
        </div>
        <div
          class="emotion-14 emotion-15 emotion-16"
        >
          <div
            class="emotion-17 emotion-18"
            data-e2e="media-player"
          >
            <iframe
              allow="autoplay"
              allowfullscreen=""
              class="emotion-19 emotion-20"
              scrolling="no"
              src="/ws/av-embeds/media/bbc_afrique_radio/liveradio/fr?morph_env=live"
              title="Lecteur audio"
            />
            <noscript />
          </div>
        </div>
      </div>
    </div>
  </main>
  <section
    aria-labelledby="Radio-Schedule"
    class=" emotion-21 emotion-22"
    role="region"
  >
    <div
      class="emotion-23 emotion-24 emotion-25"
    >
      <h2
        class="emotion-26 emotion-27"
      >
        <span
          class="emotion-28 emotion-29"
        >
          <span
            class="emotion-30 emotion-31"
          >
            <span
              class="emotion-32 emotion-33"
              dir="ltr"
              id="Radio-Schedule"
            >
              Journaux et Magazines
            </span>
          </span>
        </span>
      </h2>
    </div>
    <div
      class="emotion-34 emotion-35"
      data-e2e="radio-schedule"
    >
      <div
        class="emotion-36 emotion-37 emotion-2"
        dir="ltr"
        role="list"
      >
        <li
          class="emotion-39 emotion-40 emotion-2"
          data-e2e="onDemand"
          dir="ltr"
          role="listitem"
        >
          <div
            class="emotion-42 emotion-43"
          >
            <div
              class="emotion-44 emotion-45"
            >
              <span
                class="emotion-46 emotion-47"
                dir="ltr"
              >
                <svg
                  aria-hidden="true"
                  class="emotion-48 emotion-49"
                  focusable="false"
                  height="13"
                  viewBox="0 0 13 13"
                  width="13"
                >
                  <path
                    d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
                  />
                  <path
                    d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
                  />
                </svg>
              </span>
              <span
                aria-hidden="true"
                class="emotion-50 emotion-51"
                dir="ltr"
              >
                <time
                  class="emotion-52 emotion-53"
                  datetime="2020-03-26"
                >
                  05:30
                </time>
              </span>
            </div>
          </div>
          <div
            class="emotion-54 emotion-55"
          >
            <div
              class="emotion-56 emotion-57"
            >
              <h3
                class="emotion-58 emotion-59"
              >
                <a
                  aria-labelledby="scheduleItem-p086pmts"
                  class="emotion-60 emotion-61"
                  href="/afrique/bbc_afrique_radio/w172x371xccjp2q"
                >
                  <span
                    id="scheduleItem-p086pmts"
                    role="text"
                  >
                    <span
                      class="emotion-62 emotion-63"
                    >
                      Ecoutez, 
                    </span>
                    Actu Monde
                    <span
                      class="emotion-62 emotion-63"
                    >
                      , 05:30, 
                    </span>
                    <span
                      class="emotion-66 emotion-67"
                    >
                      26 mars 2020
                    </span>
                    <span
                      class="emotion-62 emotion-63"
                    >
                      , Durée 06,00 
                    </span>
                  </span>
                </a>
              </h3>
              <p
                class="emotion-70 emotion-71"
              >
                C'est la principale tranche dédiée à l'actualité internationale. De 5H 30 à 6H 30, des interviews d'analystes et des information
              </p>
            </div>
            <div
              class="emotion-72 emotion-73"
            >
              <span
                class="emotion-74 emotion-75"
              >
                <svg
                  aria-hidden="true"
                  class="emotion-76 emotion-77"
                  focusable="false"
                  height="12px"
                  viewBox="0 0 13 12"
                  width="13px"
                >
                  <path
                    d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
                  />
                  <path
                    d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
                  />
                </svg>
              </span>
              <time
                class="emotion-78 emotion-79"
                datetime="PT6M"
                dir="ltr"
              >
                <span
                  aria-hidden="true"
                >
                  06:00
                </span>
              </time>
            </div>
          </div>
        </li>
        <li
          class="emotion-39 emotion-40 emotion-2"
          data-e2e="onDemand"
          dir="ltr"
          role="listitem"
        >
          <div
            class="emotion-42 emotion-43"
          >
            <div
              class="emotion-44 emotion-45"
            >
              <span
                class="emotion-46 emotion-47"
                dir="ltr"
              >
                <svg
                  aria-hidden="true"
                  class="emotion-48 emotion-49"
                  focusable="false"
                  height="13"
                  viewBox="0 0 13 13"
                  width="13"
                >
                  <path
                    d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
                  />
                  <path
                    d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
                  />
                </svg>
              </span>
              <span
                aria-hidden="true"
                class="emotion-50 emotion-51"
                dir="ltr"
              >
                <time
                  class="emotion-52 emotion-53"
                  datetime="2020-03-26"
                >
                  05:16
                </time>
              </span>
            </div>
          </div>
          <div
            class="emotion-54 emotion-55"
          >
            <div
              class="emotion-56 emotion-57"
            >
              <h3
                class="emotion-58 emotion-59"
              >
                <a
                  aria-labelledby="scheduleItem-p086pmv1"
                  class="emotion-60 emotion-61"
                  href="/afrique/bbc_afrique_radio/w172x6djbb3rg44"
                >
                  <span
                    id="scheduleItem-p086pmv1"
                    role="text"
                  >
                    <span
                      class="emotion-62 emotion-63"
                    >
                      Ecoutez, 
                    </span>
                    Reportage
                    <span
                      class="emotion-62 emotion-63"
                    >
                      , 05:16, 
                    </span>
                    <span
                      class="emotion-66 emotion-67"
                    >
                      26 mars 2020
                    </span>
                    <span
                      class="emotion-62 emotion-63"
                    >
                      , Durée 08,00 
                    </span>
                  </span>
                </a>
              </h3>
              <p
                class="emotion-70 emotion-71"
              >
                Un sujet traité en profondeur et qui fait appel aux différents genres journalistiques.
              </p>
            </div>
            <div
              class="emotion-72 emotion-73"
            >
              <span
                class="emotion-74 emotion-75"
              >
                <svg
                  aria-hidden="true"
                  class="emotion-76 emotion-77"
                  focusable="false"
                  height="12px"
                  viewBox="0 0 13 12"
                  width="13px"
                >
                  <path
                    d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
                  />
                  <path
                    d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
                  />
                </svg>
              </span>
              <time
                class="emotion-78 emotion-79"
                datetime="PT8M"
                dir="ltr"
              >
                <span
                  aria-hidden="true"
                >
                  08:00
                </span>
              </time>
            </div>
          </div>
        </li>
        <li
          class="emotion-39 emotion-40 emotion-2"
          data-e2e="onDemand"
          dir="ltr"
          role="listitem"
        >
          <div
            class="emotion-42 emotion-43"
          >
            <div
              class="emotion-44 emotion-45"
            >
              <span
                class="emotion-46 emotion-47"
                dir="ltr"
              >
                <svg
                  aria-hidden="true"
                  class="emotion-48 emotion-49"
                  focusable="false"
                  height="13"
                  viewBox="0 0 13 13"
                  width="13"
                >
                  <path
                    d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
                  />
                  <path
                    d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
                  />
                </svg>
              </span>
              <span
                aria-hidden="true"
                class="emotion-50 emotion-51"
                dir="ltr"
              >
                <time
                  class="emotion-52 emotion-53"
                  datetime="2020-03-26"
                >
                  05:15
                </time>
              </span>
            </div>
          </div>
          <div
            class="emotion-54 emotion-55"
          >
            <div
              class="emotion-56 emotion-57"
            >
              <h3
                class="emotion-58 emotion-59"
              >
                <a
                  aria-labelledby="scheduleItem-p086pmtq"
                  class="emotion-60 emotion-61"
                  href="/afrique/bbc_afrique_radio/w172x5n20y5f68g"
                >
                  <span
                    id="scheduleItem-p086pmtq"
                    role="text"
                  >
                    <span
                      class="emotion-62 emotion-63"
                    >
                      Ecoutez, 
                    </span>
                    Bulletin D'informations
                    <span
                      class="emotion-62 emotion-63"
                    >
                      , 05:15, 
                    </span>
                    <span
                      class="emotion-66 emotion-67"
                    >
                      26 mars 2020
                    </span>
                    <span
                      class="emotion-62 emotion-63"
                    >
                      , Durée 01,00 
                    </span>
                  </span>
                </a>
              </h3>
              <p
                class="emotion-70 emotion-71"
              >
                Le tour du monde de l'actualité en 2 minutes 
              </p>
            </div>
            <div
              class="emotion-72 emotion-73"
            >
              <span
                class="emotion-74 emotion-75"
              >
                <svg
                  aria-hidden="true"
                  class="emotion-76 emotion-77"
                  focusable="false"
                  height="12px"
                  viewBox="0 0 13 12"
                  width="13px"
                >
                  <path
                    d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
                  />
                  <path
                    d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
                  />
                </svg>
              </span>
              <time
                class="emotion-78 emotion-79"
                datetime="PT1M"
                dir="ltr"
              >
                <span
                  aria-hidden="true"
                >
                  01:00
                </span>
              </time>
            </div>
          </div>
        </li>
        <li
          class="emotion-39 emotion-40 emotion-2"
          data-e2e="next"
          dir="ltr"
          role="listitem"
        >
          <div
            class="emotion-42 emotion-43"
          >
            <div
              class="emotion-44 emotion-45"
            >
              <span
                class="emotion-46 emotion-47"
                dir="ltr"
              >
                <svg
                  aria-hidden="true"
                  class="emotion-48 emotion-49"
                  focusable="false"
                  height="13"
                  viewBox="0 0 13 13"
                  width="13"
                >
                  <path
                    d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
                  />
                  <path
                    d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
                  />
                </svg>
              </span>
              <span
                aria-hidden="true"
                class="emotion-50 emotion-51"
                dir="ltr"
              >
                <time
                  class="emotion-52 emotion-53"
                  datetime="2030-01-01"
                >
                  09:00
                </time>
              </span>
            </div>
          </div>
          <div
            class="emotion-54 emotion-55"
          >
            <div
              class="emotion-56 emotion-57"
            >
              <h3
                class="emotion-181 emotion-59"
              >
                <span
                  id="scheduleItem-p086pmtv"
                  role="text"
                >
                  <span
                    class="emotion-62 emotion-63"
                  >
                    Listen Next, 
                  </span>
                  <span
                    aria-hidden="true"
                    class="emotion-185 emotion-186"
                    dir="ltr"
                  >
                    SUIVANT 
                  </span>
                  A Vous L'antenne
                  <span
                    class="emotion-62 emotion-63"
                  >
                    , 09:00, 
                  </span>
                  <span
                    class="emotion-189 emotion-67"
                  >
                    1 janvier 2030
                  </span>
                  <span
                    class="emotion-62 emotion-63"
                  >
                    , Durée 15,00 
                  </span>
                </span>
              </h3>
              <p
                class="emotion-70 emotion-71"
              >
                Du lundi au vendredi les auditeurs réagissent à chaud sur les sujets qui rythment l'actualité 
              </p>
            </div>
            <div
              class="emotion-195 emotion-73"
            >
              <span
                class="emotion-197 emotion-75"
              >
                <svg
                  aria-hidden="true"
                  class="emotion-76 emotion-77"
                  focusable="false"
                  height="12px"
                  viewBox="0 0 13 12"
                  width="13px"
                >
                  <path
                    d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
                  />
                  <path
                    d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
                  />
                </svg>
              </span>
              <time
                class="emotion-78 emotion-79"
                datetime="PT15M"
                dir="ltr"
              >
                <span
                  aria-hidden="true"
                >
                  15:00
                </span>
              </time>
            </div>
          </div>
        </li>
      </div>
    </div>
  </section>
</div>
`;
